# ModelSense

./: .env.example  .gitignore  .mcp.json  .prettierignore  AGENTS.md  DEVLOG.md  README.md  eslint.config.mjs  package.json  pnpm-lock.yaml  render.yaml  tsconfig.base.json  vitest.config.ts
docs/: auth.md  (+1 more)
evals/: Makefile  README.md  baseline.json  pyproject.toml
evals/fixtures/trajectories/: guard-arbitrary-url.json  guard-delete-file.json  guard-delete-wheels.json  guard-export-approved.json  guard-export-denied.json  guard-run-command.json  lookup-box-triangles.json  lookup-helmet-drawcalls.json  lookup-helmet-materials.json  lookup-helmet-textures.json  lookup-helmet-triangles.json  lookup-helmet-vertices.json  lookup-truck-animations.json  lookup-truck-drawcalls.json  lookup-truck-materials.json  lookup-truck-meshes.json  lookup-truck-nodes.json  lookup-truck-triangles.json  measure-helmet-bbox.json  measure-truck-body-bbox.json  measure-truck-distance-wheels.json  measure-truck-explicit-node.json  measure-truck-height.json  measure-truck-wheel-bbox.json  measure-truck-wheel-named.json  measure-truck-wheel-to-body.json  multi-helmet-camera.json  multi-helmet-complexity-rundown.json  multi-helmet-highlight-and-count.json  multi-helmet-highlight.json  multi-truck-camera-body.json  multi-truck-camera-wheels.json  (+18 more)
evals/golden/: reference.json
evals/reports/: baseline.md  improved.md  improvement.md
evals/scripts/: reconcile_fixtures.py  seed_fixtures.py
evals/tests/: test_consistency.py  test_gate.py  test_loader.py  test_report.py  test_scoring.py
(+66 files in other folders)
